@@ -1,3 +1,7 @@
+2008-02-26 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* Fixed bug: importer wrongly read CSV file, which has CR as newline
+	* Added: option to select import file charset
+	
 2008-02-25 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* Fixed bug: non admin user cannot upload file to import.
 
